--- a/X5WebDemo/build.gradle
+++ b/X5WebDemo/build.gradle
@@ -1,41 +1,63 @@
-//apply plugin: 'com.android.application'
-apply plugin: 'com.android.library'
+apply plugin: 'com.android.application'
+//apply plugin: 'com.android.library'
 android {
-    compileSdkVersion 23
-    buildToolsVersion '27.0.3'
-    defaultConfig {
-//        applicationId "com.example.test_webview_demo"
-        minSdkVersion 15
-        targetSdkVersion 23
-        versionCode 1
-        versionName "1.0"
+  compileSdkVersion 27
+  buildToolsVersion '27.0.3'
+  defaultConfig {
+    applicationId "com.example.test_webview_demo"
+    minSdkVersion 15
+    targetSdkVersion 22
+    versionCode 1
+    versionName "1.0"
 
-        // Specifies the ABI configurations of your native
-        // libraries Gradle should build and package with your APK.
-        ndk {
-            abiFilters "armeabi", "armeabi-v7a", "x86", "mips"
-        }
+    // Specifies the ABI configurations of your native
+    // libraries Gradle should build and package with your APK.
+    ndk {
+      abiFilters "armeabi", "armeabi-v7a", "x86", "mips"
     }
-    buildTypes {
-        release {
-            minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
-        }
+  }
+  buildTypes {
+    release {
+      minifyEnabled false
+      proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
     }
+  }
 
-    //android studio默认so文件加载目录为:src/main/jniLibs
-    //如在module的build.gradle按照如下方式,自定义了so文件加载目录请确保对应目录下只有armeabi目录
-    //    sourceSets {
-    //        main{
-    //            jniLibs.srcDirs = ['libs']
-    //        }
-    //    }
+  //android studio默认so文件加载目录为:src/main/jniLibs
+  //如在module的build.gradle按照如下方式,自定义了so文件加载目录请确保对应目录下只有armeabi目录
+  //    sourceSets {
+  //        main{
+  //            jniLibs.srcDirs = ['libs']
+  //        }
+  //    }
 }
 
 dependencies {
-    implementation fileTree(include: ['*.jar'], dir: 'libs')
-    implementation 'com.android.support:appcompat-v7:23.4.0'
-    implementation 'com.android.support.constraint:constraint-layout:1.1.0'
+  implementation fileTree(include: ['*.jar'], dir: 'libs')
+  implementation 'com.android.support:appcompat-v7:27.1.1'
+  implementation 'com.android.support.constraint:constraint-layout:1.1.0'
+  implementation 'com.github.bumptech.glide:glide:4.7.1'
+  annotationProcessor 'com.github.bumptech.glide:compiler:4.7.1'
+  implementation 'com.jakewharton:butterknife:8.8.1'
+  annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
+  implementation 'com.android.support:recyclerview-v7:27.1.1'
+
+  implementation 'com.squareup.okhttp3:okhttp:3.9.1'
+  implementation 'io.reactivex.rxjava2:rxjava:2.1.9'
+  implementation 'io.reactivex.rxjava2:rxandroid:2.0.1'
+  implementation 'com.squareup.retrofit2:retrofit:2.3.0'
+  implementation 'com.squareup.retrofit2:adapter-rxjava2:2.3.0'
+  //  implementation 'com.alibaba:fastjson:1.1.60.android'
+  //  implementation 'org.ligboy.retrofit2:converter-fastjson-android:2.1.0'
+  implementation 'com.squareup.retrofit2:converter-gson:2.3.0'
+  implementation 'com.google.code.gson:gson:2.8.2'
+  implementation 'com.squareup.okhttp3:logging-interceptor:3.9.1'
+
+  implementation 'com.jakewharton:disklrucache:2.0.2'
+
+  implementation 'com.hwangjr.rxbus:rxbus:2.0.0'
+
+  implementation 'com.shizhefei:LargeImageView:1.1.0'
+
+  implementation 'org.jsoup:jsoup:1.11.3'
 }
-
-
