--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,9 +1,9 @@
-apply plugin: 'com.android.application'
-//apply plugin: 'com.android.library'
+//apply plugin: 'com.android.application'
+apply plugin: 'com.android.library'
 android {
     compileSdkVersion 27
     defaultConfig {
-        applicationId "com.syh.deeis"
+//        applicationId "com.syh.deeis"
         minSdkVersion 16
         targetSdkVersion 27
         versionCode 1
