--- a/settings.gradle
+++ b/settings.gradle
@@ -1,2 +1,3 @@
-include ':app', ':dee', ':X5WebDemoo'
+include  ':dee', ':X5WebDemoo'
 project(':X5WebDemoo').projectDir = new File('X5WebDemo')
+//':app'
