--- a/X5WebDemo/build.gradle
+++ b/X5WebDemo/build.gradle
@@ -60,4 +60,6 @@ dependencies {
   implementation 'com.shizhefei:LargeImageView:1.1.0'
 
   implementation 'org.jsoup:jsoup:1.11.3'
+
+  implementation 'com.bigkoo:convenientbanner:2.0.5'
 }
